style: prevent names with interpuncts from wrapping in the middle

--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
     overflow: hidden;
 }
 
+
+.text-nowrap {
+    white-space: nowrap;
+    display: inline-block;
+}
+
 /* App Container */
 .app-container {
     display: flex;
